--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>sample page</title>
   </head>
   <body>
-    <div class="flex justify-center">
+    <div class="flex justify-center bg-gray-300">
       <div class="mx-4 order-last">
         <img
           src="https://images.rawpixel.com/image_png_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjgwLTE2Ni1wLWwxZGJ1cTN2LnBuZw.png"
           class="h-[200px]"
         />
       </div>
-      <div class="mx-4 self-center border-emerald-600">
-        <h1>Welcome to NorthByAsad</h1>
-        <h2>A premium in sight and sound</h2>
-        <button>Learn More</button>
+      <div class="mx-4 self-center border-emerald-600 text-center">
+        <h1 class="text-blue-500 text-3xl font-bold">Welcome to NorthByAsad</h1>
+        <h2 class="font-semibold text-1xl">A premium in sight and sound</h2>
+        <button
+          class="my-4 px-4 py-2 border-2 border-emerald-700 rounded-3xl text-white bg-blue-900"
+        >
+          Learn More
+        </button>
       </div>
     </div>
   </body>
